--- a/expecting.html
+++ b/expecting.html
@@ -27,5 +27,16 @@
 	+53 days
 	5/6/2020		5.0R	***EXPECTING***
 	</p>
+	
+	<p>
+	Expecting 25/7/2021-4/8/2021
+	~5.0R	***EXPECTING***
+	</p>
+	
+		<p>
+	<a href="https://earthquake.usgs.gov/earthquakes/eventpage/nc73584926/executive">M 6.0 - Antelope Valley, CA</a><br>
+	+53 days
+	5/6/2020		5.0R	***EXPECTING***
+	</p>
 </body>
 </html>
