--- a/days.html
+++ b/days.html
@@ -4,8 +4,7 @@
 	<title>days</title>
 </head>
 <body>
- 	From USA/Mexico it takes 53 days
-	<br>
+ 	From USA/Mexico it takes 53 days<br>
 	From Nepal it takes 46 days
 </body>
 </html>
