--- a/days.html
+++ b/days.html
@@ -4,7 +4,11 @@
 	<title>days</title>
 </head>
 <body>
- 	From USA/Mexico it takes 53 days<br>
-	From Nepal it takes 46 days
+ 	From USA/Mexico it takes 53 days<br><br>
+	From Nepal it takes 46 days<br><br>
+	<a href="https://hirweb.nict.go.jp/sedoss/solact4/do"><br>
+	On a high wave in Electron Flux we expect in ~45±5 days. Sometimes the longer the wave the greater the EQ<br>
+	On high (red) k-index we expect higher EQ<br>
+	
 </body>
 </html>
