--- a/days.html
+++ b/days.html
@@ -4,6 +4,7 @@
 	<title>days</title>
 </head>
 <body>
+	<a href="index.html">Back</a><br>
  	From USA/Mexico it takes 53 days<br><br>
 	From Nepal it takes 46 days<br><br>
 	<a href="https://hirweb.nict.go.jp/sedoss/solact4/do"></a><br>
