--- a/expecting.html
+++ b/expecting.html
@@ -7,11 +7,11 @@
 	<a href="index.html">Back</a> 
 	
 	<p>
-	Expecting 25/7/2021-4/8/2021<br>
-	~5.0R	***EXPECTING***<br>
+	Expecting 25/7/2021-4/8/2021 through chart (10/6/2021)<br>
+	~5.0R	***EXPECTING***<br> 
 	</p>
 	
-		<p>
+	<p>
 	<a href="https://earthquake.usgs.gov/earthquakes/eventpage/nc73584926/executive">M 6.0 - Antelope Valley, CA</a><br>
 	+53 days<br>
 	5/6/2020		5.0R	***EXPECTING***<br>
