--- a/expecting.html
+++ b/expecting.html
@@ -12,7 +12,7 @@
 	</p>
 	
 	<p>
-	<a href="https://earthquake.usgs.gov/earthquakes/eventpage/us7000e9mr/executive"M 5.9 - 149 km W of Gold Beach, Oregon</a><br>
+	<a href="https://earthquake.usgs.gov/earthquakes/eventpage/us7000e9mr/executive">M 5.9 - 149 km W of Gold Beach, Oregon</a><br>
 	+53 days<br>
 	27/7/2020		5.0R	***EXPECTING***<br>
 	</p>
