--- a/expecting.html
+++ b/expecting.html
@@ -21,6 +21,9 @@
 	<a href="https://earthquake.usgs.gov/earthquakes/eventpage/nc73584926/executive">M 6.0 - Antelope Valley, CA</a><br>
 	+53 days<br>
 	30/8/2021		5.0R	***EXPECTING***<br>
+		EDIT: EXPECTING BIG EQ WORLDWIDE
 	</p>
+	
+	
 </body>
 </html>
